--- a/ui/src/app/data-explorer/components/widgets/density/density-chart-widget.component.html
+++ b/ui/src/app/data-explorer/components/widgets/density/density-chart-widget.component.html
@@ -16,15 +16,17 @@
   ~
   -->
 
-<div fxFlex="100" fxLayout="column">
-    <h5>Histogram Field</h5>
-    <mat-form-field color="accent" fxFlex="100">
-        <mat-label>Select Field</mat-label>
-        <mat-select [(value)]="currentlyConfiguredWidget.dataConfig.selectedProperty" (selectionChange)="setSelectedProperties($event)">
-            <mat-option [value]="property.runtimeName" *ngFor="let property of currentlyConfiguredWidget.dataConfig.availableProperties">
-                <span class="pipeline-name">{{ property.runtimeName }}</span>
-            </mat-option>
-        </mat-select>
-    </mat-form-field>
-</div>
+<div fxLayout="column" fxFlex="100"
+     [ngStyle]="{background: dataExplorerWidget.baseAppearanceConfig.backgroundColor, color: dataExplorerWidget.baseAppearanceConfig.textColor}">
 
+    <sp-load-data-spinner *ngIf="showIsLoadingData" class="h-100"></sp-load-data-spinner>
+    <sp-no-data-in-date-range *ngIf="showNoDataInDateRange" [viewDateRange]="timeSettings"></sp-no-data-in-date-range>
+
+    <plotly-plot *ngIf="data !== undefined && !showNoDataInDateRange && !showIsLoadingData"
+                 [divId]="dataExplorerWidget._id"
+                 class="plotly-container"
+                 [data]="data"
+                 [layout]="graph.layout"
+                 [config]="graph.config">
+    </plotly-plot>
+</div>
