--- a/ui/src/app/data-explorer/components/designer-panel/data-settings/data-explorer-widget-data-settings.component.html
+++ b/ui/src/app/data-explorer/components/designer-panel/data-settings/data-explorer-widget-data-settings.component.html
@@ -57,6 +57,9 @@
             <mat-option [value]="'line-chart'">
                 <span class="pipeline-name">Line Chart</span>
             </mat-option>
+            <mat-option [value]="'pie-chart'">
+                <span class="pipeline-name">Pie Chart</span>
+            </mat-option>
             <mat-option [value]="'table'">
                 <span class="pipeline-name">Table</span>
             </mat-option>
