--- a/ui/src/app/data-explorer/components/widget/data-explorer-dashboard-widget.component.html
+++ b/ui/src/app/data-explorer/components/widget/data-explorer-dashboard-widget.component.html
@@ -121,6 +121,19 @@
                             class="h-100">
                     </sp-data-explorer-density-chart-widget>
                 </div>
+                <div *ngIf="configuredWidget.widgetType === 'pie-chart'" class="h-100 p-0">
+                    <sp-data-explorer-pie-chart-widget
+                            (removeWidgetCallback)="removeWidget()"
+                            [timeSettings]="timeSettings"
+                            [gridsterItem]="dashboardItem"
+                            [gridsterItemComponent]="gridsterItemComponent"
+                            [editMode]="editMode"
+                            [dataViewDashboardItem]="dashboardItem"
+                            [dataExplorerWidget]="configuredWidget"
+                            [dataLakeMeasure]="dataLakeMeasure"
+                            class="h-100">
+                    </sp-data-explorer-pie-chart-widget>
+                </div>
             </div>
         </div>
     </div>
