--- a/ui/src/app/data-explorer/components/widgets/table/config/table-widget-config.component.html
+++ b/ui/src/app/data-explorer/components/widgets/table/config/table-widget-config.component.html
@@ -34,9 +34,14 @@
 
     <mat-form-field fxFlex="100" color="accent">
         <mat-label>
-            <mat-icon>search</mat-icon>
             <span>&nbsp;Limit</span></mat-label>
         <input [(ngModel)]="currentlyConfiguredWidget.dataConfig.limit" matInput (input)="onFilterChange($event.target.value)">
+    </mat-form-field>
+
+    <mat-form-field fxFlex="100" color="accent">
+        <mat-label>
+            <span>&nbsp;Page</span></mat-label>
+        <input [(ngModel)]="currentlyConfiguredWidget.dataConfig.page" matInput (input)="onFilterChange($event.target.value)">
     </mat-form-field>
 </div>
 
