[STREAMPIPES-421] Configure collection static properties CSV file

--- a/ui/src/app/core-ui/static-properties/static-collection/add-to-collection/add-to-collection.component.html
+++ b/ui/src/app/core-ui/static-properties/static-collection/add-to-collection/add-to-collection.component.html
@@ -22,7 +22,7 @@
     </button>
     <button mat-button mat-flat-button (click)="selectFileSelection()">
         <mat-icon class="icon">add</mat-icon>
-        <span>Add file</span>
+        <span>Import from file</span>
     </button>
 </div>
 <div *ngIf="showFileSelecion">
