--- a/ui/src/app/configuration/datalake-configuration/datalake-configuration.component.html
+++ b/ui/src/app/configuration/datalake-configuration/datalake-configuration.component.html
@@ -24,13 +24,77 @@
                 <span flex></span>
             </div>
         </div>
-        <div fxFlex="100" fxLayout="column" fxLayoutAlign="center center" class="sp-blue-border page-container-padding-inner">
-            <form (ngSubmit)="removeDataFromDataLake()" class="form-width mt-10" fxFlex="100" fxLayout="column">
-                <div fxLayoutAlign="center center">
-                    <button mat-raised-button color="warn" type="submit" class="md-raised md-primary submit-button">Clean</button>
-                </div>
-                <h4 style="color: var(--color-warn)">All data in the datalake will be deleted. This is a BETA feature and could break things!</h4>
-            </form>
+
+        <div fxFlex="100" class="sp-blue-border">
+            <table fxFlex="100" mat-table [dataSource]="dataSource" style="width: 100%;" matSort>
+
+                <ng-container matColumnDef="name">
+                    <th mat-header-cell mat-sort-header *matHeaderCellDef>Name</th>
+                    <td mat-cell *matCellDef="let configurationEntry">
+                        <h4 style="margin-bottom:0px;">{{configurationEntry.name}}</h4>
+                        <!--                        <h5>{{adapter.description != '' ? adapter.description : '-'}}</h5>-->
+                    </td>
+                </ng-container>
+
+                <ng-container matColumnDef="pipeline">
+                    <th mat-header-cell mat-sort-header *matHeaderCellDef>Related Pipeline</th>
+                    <td mat-cell *matCellDef="let configurationEntry">
+                        {{configurationEntry.pipelines}}
+                    </td>
+                </ng-container>
+
+                <ng-container matColumnDef="events">
+                    <th mat-header-cell mat-sort-header *matHeaderCellDef># Events</th>
+                    <td mat-cell *matCellDef="let configurationEntry">
+                        {{configurationEntry.events | number}}
+                    </td>
+                </ng-container>
+
+                <ng-container matColumnDef="truncate">
+                    <th mat-header-cell *matHeaderCellDef>Truncate</th>
+                    <td mat-cell *matCellDef="let measurement">
+                        <div fxLayout="row">
+                            <span fxFlex fxFlexOrder="3" fxLayout="row" fxLayoutAlign="center center">
+                                    <button color="accent" mat-button mat-icon-button matTooltip="Delete adapter"
+                                            data-cy="delete" matTooltipPosition="above"
+                                            (click)="cleanDatalakeIndex(measurement)">
+                                        <i class="material-icons">local_fire_department</i>
+                                    </button>
+                                </span>
+                        </div>
+                    </td>
+                </ng-container>
+
+                <ng-container matColumnDef="remove">
+                    <th mat-header-cell *matHeaderCellDef>Remove</th>
+                    <td mat-cell *matCellDef="let configurationEntry">
+                        <div fxLayout="row">
+                            <span fxFlex fxFlexOrder="3" fxLayout="row" fxLayoutAlign="center center">
+                                    <button color="accent"
+                                            mat-button
+                                            mat-icon-button
+                                            matTooltip="Delete data lake index"
+                                            data-cy="delete"
+                                            matTooltipPosition="above"
+                                            [disabled]="!configurationEntry.remove"
+                                            (click)="deleteDatalakeIndex(configurationEntry)">
+                                        <i class="material-icons">delete</i>
+                                    </button>
+                                </span>
+                        </div>
+                    </td>
+                </ng-container>
+
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+            </table>
+        </div>
+        <div fxFlex="100" fxLayoutAlign="end end">
+            <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" [pageSize]="20"></mat-paginator>
+        </div>
+        <div fxFlex="100" fxLayout="column" fxLayoutAlign="center center" *ngIf="availableMeasurements.length == 0">
+            <h5>(no stored measurements)</h5>
         </div>
     </div>
 </div>
