--- a/ui/src/app/connect/components/data-marketplace/existing-adapters/existing-adapters.component.html
+++ b/ui/src/app/connect/components/data-marketplace/existing-adapters/existing-adapters.component.html
@@ -61,12 +61,13 @@
                 <td mat-cell *matCellDef="let adapter">
                     <div class="type-data" fxLayout="row" fxLayoutAlign="start start">
                         <div fxLayout="row" fxLayoutAlign="center center">
-                            <mat-icon *ngIf="connectService.isDataSetDescription(adapter)" class="historic">lens</mat-icon>
+                            <mat-icon *ngIf="connectService.isDataSetDescription(adapter)" class="historic">lens
+                            </mat-icon>
                             <mat-icon *ngIf="connectService.isDataStreamDescription(adapter)" class="real-time">lens
                             </mat-icon>
                             <div fxFlex="100" fxLayoutAlign="center center">
-                            <span *ngIf="connectService.isDataSetDescription(adapter)">&nbsp;Data Set</span>
-                            <span *ngIf="connectService.isDataStreamDescription(adapter)">&nbsp;Data Stream</span>
+                                <span *ngIf="connectService.isDataSetDescription(adapter)">&nbsp;Data Set</span>
+                                <span *ngIf="connectService.isDataStreamDescription(adapter)">&nbsp;Data Stream</span>
                             </div>
                         </div>
                     </div>
@@ -83,26 +84,26 @@
                 <th mat-header-cell *matHeaderCellDef> Action</th>
                 <td mat-cell *matCellDef="let adapter">
                     <div fxLayout="row">
-<!--                <span fxFlex fxFlexOrder="1" fxLayout="row" fxLayoutAlign="center center">-->
-<!--                    <button color="primary" mat-button mat-icon-button matTooltip="Show adapter"-->
-<!--                            matTooltipPosition="above"><i-->
-<!--                            class="material-icons">search</i>-->
-<!--                    </button>-->
-<!--                </span>-->
-<!--                        <span fxFlex fxFlexOrder="2" fxLayout="row" fxLayoutAlign="center center">-->
-<!--                    <button color="primary" mat-button mat-icon-button matTooltip="Modify adapter"-->
-<!--                            matTooltipPosition="above"-->
-<!--                            [disabled]="adapter.running">-->
-<!--                        <i class="material-icons">mode_edit</i>-->
-<!--                    </button>-->
-<!--                </span>-->
-                <span fxFlex fxFlexOrder="1" fxLayout="row" fxLayoutAlign="center center">
+                        <!--                <span fxFlex fxFlexOrder="1" fxLayout="row" fxLayoutAlign="center center">-->
+                        <!--                    <button color="primary" mat-button mat-icon-button matTooltip="Show adapter"-->
+                        <!--                            matTooltipPosition="above"><i-->
+                        <!--                            class="material-icons">search</i>-->
+                        <!--                    </button>-->
+                        <!--                </span>-->
+                        <!--                        <span fxFlex fxFlexOrder="2" fxLayout="row" fxLayoutAlign="center center">-->
+                        <!--                    <button color="primary" mat-button mat-icon-button matTooltip="Modify adapter"-->
+                        <!--                            matTooltipPosition="above"-->
+                        <!--                            [disabled]="adapter.running">-->
+                        <!--                        <i class="material-icons">mode_edit</i>-->
+                        <!--                    </button>-->
+                        <!--                </span>-->
+                        <span fxFlex fxFlexOrder="1" fxLayout="row" fxLayoutAlign="center center">
                     <button color="accent" mat-button mat-icon-button matTooltip="Create adapter template"
                             matTooltipPosition="above" (click)="createTemplate(adapter)"><i
                             class="material-icons">content_copy</i>
                     </button>
                 </span>
-                <span fxFlex fxFlexOrder="3" fxLayout="row" fxLayoutAlign="center center">
+                        <span fxFlex fxFlexOrder="3" fxLayout="row" fxLayoutAlign="center center">
                     <button color="accent" mat-button mat-icon-button matTooltip="Delete adapter"
                             data-cy="delete" matTooltipPosition="above" (click)="deleteAdapter(adapter)">
                         <i class="material-icons">delete</i>
@@ -121,6 +122,6 @@
         <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" [pageSize]="20"></mat-paginator>
     </div>
     <div fxFlex="100" fxLayout="column" fxLayoutAlign="center center" *ngIf="existingAdapters.length == 0">
-        <h5>(no pipelines available)</h5>
+        <h5>(no adapters available)</h5>
     </div>
 </div>
